import { describe, it, expect } from 'vitest';
import { buildComponentModel } from '../../components/model';
import { resolveTokens } from '../../tokens/resolver';
import { renderComponent } from '../../templates/engine';
import { Framework, ThemePreset, StyleSystem, ComponentName } from '../../core/enums';

const mockConfig = {
  framework: Framework.React,
  theme: ThemePreset.Minimal,
  styleSystem: StyleSystem.CSS,
  tokens: {
    color: {
      primary: '#6C63FF',
      secondary: '#F3F2FF',
      surface: '#FFFFFF',
      background: '#F8F9FA',
      border: '#E2E1F0',
      text: '#1A1A2E',
      textMuted: '#6B6B8A',
      destructive: '#E24B4A',
      success: '#1D9E75',
    },
    radius: { sm: '4px', md: '8px', lg: '12px' },
    spacing: { unit: '4px' },
    typography: { fontFamily: 'system-ui, sans-serif', scaleBase: '16px' },
  },
  features: { hover: true, focusRing: true, motionSafe: true },
  a11y: {
    focusRingColor: 'var(--color-primary)',
    focusRingWidth: '2px',
    focusRingOffset: '3px',
    reduceMotion: true,
  },
} as any;

describe('Accordion snapshots', () => {
  it('react css mode snapshot', async () => {
    const tokens = resolveTokens(mockConfig);
    const model = buildComponentModel(ComponentName.Accordion, tokens, mockConfig, true);
    const files = await renderComponent(model);

    expect(files['Accordion.tsx']).toMatchSnapshot();
    expect(files['Accordion.module.css']).toMatchSnapshot();
    expect(files['Accordion.stories.tsx']).toMatchSnapshot();

    expect(files['Accordion.tsx']).toContain('export const Accordion');
    expect(files['Accordion.tsx']).toContain('aria-expanded');
    expect(files['Accordion.tsx']).toContain('role="region"');
    expect(files['Accordion.tsx']).toContain('Object.assign');
  });

  it('react scss mode snapshot', async () => {
    const config = { ...mockConfig, styleSystem: StyleSystem.SCSS };
    const tokens = resolveTokens(config);
    const model = buildComponentModel(ComponentName.Accordion, tokens, config, true);
    const files = await renderComponent(model);

    expect(files['Accordion.module.scss']).toMatchSnapshot();
    expect(files['Accordion.tsx']).toContain("import styles from './Accordion.module.scss'");
  });

  it('react tailwind mode snapshot', async () => {
    const config = { ...mockConfig, styleSystem: StyleSystem.Tailwind };
    const tokens = resolveTokens(config);
    const model = buildComponentModel(ComponentName.Accordion, tokens, config, true);
    const files = await renderComponent(model);

    expect(files['Accordion.tsx']).toMatchSnapshot();
    expect(files['Accordion.module.css']).toBeUndefined();
    expect(files['Accordion.tsx']).not.toContain('Accordion.module');
    expect(files['Accordion.tsx']).toContain('aria-expanded');
  });

  it('vue css mode snapshot', async () => {
    const config = { ...mockConfig, framework: Framework.Vue };
    const tokens = resolveTokens(config);
    const model = buildComponentModel(ComponentName.Accordion, tokens, config, true);
    const files = await renderComponent(model);

    expect(files['Accordion.vue']).toMatchSnapshot();
    expect(files['Accordion.vue']).toContain('aria-expanded');
    expect(files['Accordion.vue']).toContain("role: 'region'");
  });

  it('angular css mode snapshot (monolithic)', async () => {
    const config = { ...mockConfig, framework: Framework.Angular };
    const tokens = resolveTokens(config);
    const model = buildComponentModel(ComponentName.Accordion, tokens, config, true);
    const files = await renderComponent(model);

    expect(files['accordion.component.ts']).toMatchSnapshot();
    expect(files['accordion.component.html']).toMatchSnapshot();
    expect(files['accordion.component.ts']).toContain('export class AccordionComponent');
    expect(files['accordion.component.html']).toContain('aria-expanded');
    expect(files['accordion.component.ts']).not.toContain('Object.assign');
  });
});
